<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Spinner
        android:id="@+id/spImageSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spImageColor"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:entries="@array/image_sizes"
        android:prompt="@string/image_size_label" />

    <Spinner
        android:id="@+id/spImageColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spImageSize"
        android:layout_toRightOf="@+id/tvImageColor"
        android:entries="@array/image_colors"
        android:prompt="@string/image_size_label" />

    <Spinner
        android:id="@+id/spImageType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spImageColor"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spImageColor"
        android:entries="@array/image_types"
        android:prompt="@string/image_type_label" />

    <EditText
        android:id="@+id/etSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spImageType"
        android:ems="10"
        android:hint="@string/site_label" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etSite"
        android:layout_centerHorizontal="true"
        android:text="@string/save_settings_label" />

    <TextView
        android:id="@+id/tvImageSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spImageSize"
        android:layout_alignParentLeft="true"
        android:text="@string/image_size_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvImageColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spImageColor"
        android:layout_alignParentLeft="true"
        android:text="@string/image_color_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvImageType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spImageType"
        android:layout_alignParentLeft="true"
        android:text="@string/image_type_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
